# OpenGLStudy

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
