cmake_minimum_required(VERSION 3.15)
project(OpenGLStudy)

set(CMAKE_CXX_STANDARD 14)
set(GLEW_H /usr/local/Cellar/glew/2.1.0/include/GL)
set(GLFW_H /usr/local/Cellar/glfw/3.3.2/include/GLFW)
set(GLAD_H /usr/local/include/glad)
set(KH_H /usr/local/include/KHR)
include_directories(${GLEW_H} ${GLFW_H} ${GLAD_H} ${KH_H})
include_directories(/usr/local/include/glm)
# 添加目标链接
set(GLEW_LINK /usr/local/Cellar/glew/2.1.0/lib/libGLEW.2.1.dylib)
set(GLFW_LINK /usr/local/Cellar/glfw/3.3.2/lib/libglfw.3.dylib)
link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK})
set(SOURCE_FILES glad.c main.cpp)
add_executable(OpenGLStudy ${SOURCE_FILES})
# mac下这步很重要
if (APPLE)
    target_link_libraries(OpenGLStudy "-framework OpenGL")
    target_link_libraries(OpenGLStudy "-framework GLUT")
endif ()